c/src/test/resources/c/mini_bnc/invalid/funcNestLoop.ctrl
<controlFile>
  <sourceFile name="funcNestLoop.c" id="1" />
  <run>
    <startPosition fileId="1" line="19" />
    <wayPoint fileId="1" line="23" >
      <loop>
        <invariant><![CDATA[
          x==1
        ]]>
        </invariant>
        <wayPoint fileId="1" line="24" >
          <function funcName="g">
            <wayPoint fileId="1" line="14" >
              <loop>
                <invariant><![CDATA[
                  gb == 2
                ]]>
                </invariant>
                <wayPoint fileId="1" line="15" >
                  <function funcName="f">
                    <wayPoint fileId="1" line="5" >
                      <loop>
                        <invariant><![CDATA[
                          fb == 2
                        ]]>
                        </invariant>
                      </loop>
                    </wayPoint>
                  </function>
                </wayPoint>
              </loop>
            </wayPoint>
          </function>
        </wayPoint>
      </loop>
    </wayPoint>
    <endPosition fileId="1" line="26" />
  </run>
</controlFile>